--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/URLManager.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/peasCore/URLManager.properties
@@ -43,6 +43,7 @@ clipboard        =/Rclipboard/jsp/
 jobManagerPeas   =/RjobManagerPeas/jsp/
 jobDomainPeas    =/RjobDomainPeas/jsp/
 jobStartPagePeas =/RjobStartPagePeas/jsp/
+jobSearchPeas =/RjobSearchPeas/jsp/
 jobContentPeas   =/RjobContentPeas/jsp/
 jobOrganizationPeas =/RjobOrganizationPeas/jsp/
 jobReportPeas    =/RjobReportPeas/jsp/
