--- a/war-core/src/test/resources/com/stratelia/silverpeas/peasCore/URLManager.properties
+++ b/war-core/src/test/resources/com/stratelia/silverpeas/peasCore/URLManager.properties
@@ -45,6 +45,7 @@ jobDomainPeas    =/RjobDomainPeas/jsp/
 jobStartPagePeas =/RjobStartPagePeas/jsp/
 jobContentPeas   =/RjobContentPeas/jsp/
 jobOrganizationPeas =/RjobOrganizationPeas/jsp/
+jobSearchPeas =/RjobSearchPeas/jsp/
 jobReportPeas    =/RjobReportPeas/jsp/
 notificationUser =/RnotificationUser/jsp/
 communicationUser =/RcommunicationUser/jsp/
