fixing bug #2121 Externalizing settings to define default behavior of user preferences.

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/settings/personalizationPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/settings/personalizationPeasSettings.properties
@@ -33,3 +33,7 @@ updateEmail = true
 
 //LDAP informations displayed
 displayInfosLDAP = true
+
+DefaultWebDAVEditingStatus = true
+DefaultDragNDropStatus = true
+DefaultThesaurusStatus = false
