--- a/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle.properties
@@ -23,7 +23,7 @@
 #
 JSP.administrationTab = Administration
 JSP.searchTab = Recherche
-JSP.searchField = Id ou Nom
+JSP.searchField = Id ou Nom (hors Publications)
 JSP.search = Rechercher
 JSP.space = Espaces / sous-espaces
 JSP.service = Services
