--- a/config-core/src/main/config/initialize/subscribeInitializeSettings.properties
+++ b/config-core/src/main/config/initialize/subscribeInitializeSettings.properties
@@ -24,4 +24,4 @@
 Initialize = false
 InitializeClass = 
 CallBack = true
-CallBackClass = com.silverpeas.util.subscribe.SubscribeCallBack
+CallBackClass = com.silverpeas.subscribe.SubscriptionCallBack
