--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ target
 /ejb-core/searchengine/.project
 /ejb-core/pdc/src/main/resources/META-INF/MANIFEST.MF
 /ejb-core/searchengine/src/main/resources/META-INF/MANIFEST.MF
+/ejb-core/node/.classpath
+/ejb-core/node/.project
+/ejb-core/node/.settings
+/ejb-core/node/src/main/resources/META-INF/MANIFEST.MF
+/ejb-core/publication/.settings
+/ejb-core/publication/.classpath
+/ejb-core/publication/.project
+/ejb-core/publication/src/main/resources/META-INF/MANIFEST.MF
