--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -160,6 +160,7 @@ pdcPeas.pertinence = Pertinence
 pdcPeas.valeur = Valeur
 pdcPeas.emplacement = Emplacement
 pdcPeas.definition = Définition
+pdcPeas.searchType = Type de contribution :
 
 pdcPeas.glossaire_to_view = Visualiser le glossaire
 pdcPeas.tracker_to_select = Valider la sélection
@@ -266,6 +267,15 @@ pdcPeas.external.search.unknown=Serveur externe
 pdcPeas.external.search.error=Veuillez contacter l'administrateur du site. Un problème de configuration ne permet pas d'obtenir le lien d'accès à cette information externe.
 pdcPeas.error= Erreur
 
-# Label linked to pdcPeasSettings.properties
+# Label linked to pdcPeasSettings.properties : external search
 external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
+
+# Label linked to pdcPeasSettings.properties : typed search
+search.type.1.label= Gestion documentaire
+search.type.2.label= Evénements
+search.type.3.label= Images
+search.type.4.label= Questionnaire
+search.type.5.label= Gestion de projet
+
+
