--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -72,3 +72,29 @@ external.search.server.2.name=EXTERNAL SRV 2
 external.search.server.2.data.path=D:\\silverpeas\\external_server_2\\data
 external.search.server.2.component.filters=kmelia
 external.search.server.2.url=http://external_server_2/silverpeas
+
+
+###############################################################################
+# Type search configuration. 
+# Be careful This part must be linked to two others configuration file:
+# 1) the list of XmlComponent configuration.
+# 2) the resource bundle pdcBundle/properties
+#
+# there are two configuration keys:
+# 1) search.type.X.components = comma separated values of components name.
+# 2) search.type.X.types = comma separated values of object type. 
+# For example you can specify SUBJECT or MESSAGE in a blog component
+search.type.1.components=kmelia,kmax,toolbox
+search.type.1.types=Publication
+
+search.type.2.components=almanach
+search.type.2.types=
+
+search.type.3.components=gallery
+search.type.3.types=
+
+search.type.4.components=survey,pollingStation
+search.type.4.types=
+
+search.type.4.components=projectManager
+search.type.4.types=
