Fixing support #2157 : missing configuration for uniqueid type field

--- a/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/form/settings/types.properties
@@ -32,6 +32,7 @@ text.displayer.radio = com.silverpeas.form.fieldDisplayer.RadioButtonDisplayer
 text.displayer.checkbox = com.silverpeas.form.fieldDisplayer.CheckBoxDisplayer
 text.displayer.url = com.silverpeas.form.fieldDisplayer.UrlFieldDisplayer
 text.displayer.time = com.silverpeas.form.fieldDisplayer.TimeFieldDisplayer
+text.displayer.uniqueid = com.silverpeas.form.fieldDisplayer.UniqueIdFieldDisplayer
 text.displayer.pdcPositions = com.silverpeas.form.fieldDisplayer.PdcPositionsFieldDisplayer
 
 date.implementation = com.silverpeas.form.fieldType.DateFieldImpl
@@ -47,6 +48,7 @@ user.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
 multipleUser.implementation = com.silverpeas.form.fieldType.MultipleUserField
 multipleUser.displayer = com.silverpeas.form.fieldDisplayer.MultipleUserFieldDisplayer
 multipleUser.displayer.multipleUser = com.silverpeas.form.fieldDisplayer.MultipleUserFieldDisplayer
+multipleUser.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
 
 pdcUser.implementation = com.silverpeas.form.fieldType.PdcUserField
 pdcUser.displayer = com.silverpeas.form.fieldDisplayer.PdcUserFieldDisplayer
