--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -35,6 +35,7 @@ GML.allMP						= Tous
 GML.allFP						= Toutes
 GML.agenda 						= Agenda
 GML.attachments 					= Fichiers joints
+GML.permalink 						= Permalien
 GML.noLockedFile           = Aucun fichier r\u00e9serv\u00e9 !
 GML.author						= Auteur
 GML.publisher						= Publieur
