closing feature #2097 Now, search based on contributions type is possible without entering keywords.

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -272,10 +272,10 @@ external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
 
 # Label linked to pdcPeasSettings.properties : typed search
-search.type.1.label= Gestion documentaire
+search.type.1.label= Publications GED
 search.type.2.label= Evénements
 search.type.3.label= Images
-search.type.4.label= Questionnaire
-search.type.5.label= Gestion de projet
-
-
+search.type.4.label= Sondages, Enquêtes
+search.type.5.label= Tâches (projet)
+search.type.6.label= Blogs
+search.type.7.label= Forums
