--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -83,7 +83,7 @@ external.search.server.2.url=http://external_server_2/silverpeas
 # there are two configuration keys:
 # 1) search.type.X.components = comma separated values of components name.
 # 2) search.type.X.types = comma separated values of object type. 
-# For example you can specify SUBJECT or MESSAGE in a blog component
+# For example you can specify SUBJECT or MESSAGE in a forum component
 search.type.1.components=kmelia,kmax,toolbox
 search.type.1.types=Publication
 
@@ -91,10 +91,17 @@ search.type.2.components=almanach
 search.type.2.types=
 
 search.type.3.components=gallery
-search.type.3.types=
+search.type.3.types=Photo
 
 search.type.4.components=survey,pollingStation
 search.type.4.types=
 
-search.type.4.components=projectManager
-search.type.4.types=
+search.type.5.components=projectManager
+search.type.5.types=
+
+search.type.6.components=blog
+search.type.6.types=Publication
+
+search.type.7.components=forums
+search.type.7.types=
+
