Il manque author, avatar, domaine pour permanent link et test affichage sous les IE

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -187,6 +187,8 @@ GML.thefield						= Le champ
 GML.isRequired						= est obligatoire.
 GML.requiredField					= Obligatoire
 GML.by							= par
+GML.fromDate							= Du
+GML.toDate							= au
 
 
 # format
