--- a/lib-core/src/test/resources/com/silverpeas/form/settings/types.properties
+++ b/lib-core/src/test/resources/com/silverpeas/form/settings/types.properties
@@ -22,45 +22,45 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 text.implementation = com.silverpeas.form.fieldType.TextFieldImpl
-text.displayer = com.silverpeas.form.fieldDisplayer.TextFieldDisplayer
-text.displayer.text = com.silverpeas.form.fieldDisplayer.TextFieldDisplayer
-text.displayer.textarea = com.silverpeas.form.fieldDisplayer.TextAreaFieldDisplayer
-text.displayer.wysiwyg = com.silverpeas.form.fieldDisplayer.WysiwygFCKFieldDisplayer
-text.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
-text.displayer.listbox = com.silverpeas.form.fieldDisplayer.ListBoxFieldDisplayer
-text.displayer.radio = com.silverpeas.form.fieldDisplayer.RadioButtonDisplayer
-text.displayer.checkbox = com.silverpeas.form.fieldDisplayer.CheckBoxDisplayer
-text.displayer.url = com.silverpeas.form.fieldDisplayer.UrlFieldDisplayer
-text.displayer.time = com.silverpeas.form.fieldDisplayer.TimeFieldDisplayer
-text.displayer.pdcPositions = com.silverpeas.form.fieldDisplayer.PdcPositionsFieldDisplayer
+text.displayer = com.silverpeas.form.displayers.TextFieldDisplayer
+text.displayer.text = com.silverpeas.form.displayers.TextFieldDisplayer
+text.displayer.textarea = com.silverpeas.form.displayers.TextAreaFieldDisplayer
+text.displayer.wysiwyg = com.silverpeas.form.displayers.WysiwygFCKFieldDisplayer
+text.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
+text.displayer.listbox = com.silverpeas.form.displayers.ListBoxFieldDisplayer
+text.displayer.radio = com.silverpeas.form.displayers.RadioButtonDisplayer
+text.displayer.checkbox = com.silverpeas.form.displayers.CheckBoxDisplayer
+text.displayer.url = com.silverpeas.form.displayers.UrlFieldDisplayer
+text.displayer.time = com.silverpeas.form.displayers.TimeFieldDisplayer
+text.displayer.pdcPositions = com.silverpeas.form.displayers.PdcPositionsFieldDisplayer
 date.implementation = com.silverpeas.form.fieldType.DateFieldImpl
-date.displayer = com.silverpeas.form.fieldDisplayer.DateFieldDisplayer
-date.displayer.date = com.silverpeas.form.fieldDisplayer.DateFieldDisplayer
-date.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+date.displayer = com.silverpeas.form.displayers.DateFieldDisplayer
+date.displayer.date = com.silverpeas.form.displayers.DateFieldDisplayer
+date.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
 user.implementation = com.silverpeas.form.fieldType.UserField
-user.displayer = com.silverpeas.form.fieldDisplayer.UserFieldDisplayer
-user.displayer.user = com.silverpeas.form.fieldDisplayer.UserFieldDisplayer
-user.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+user.displayer = com.silverpeas.form.displayers.UserFieldDisplayer
+user.displayer.user = com.silverpeas.form.displayers.UserFieldDisplayer
+user.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
 multipleUser.implementation = com.silverpeas.form.fieldType.MultipleUserField
-multipleUser.displayer = com.silverpeas.form.fieldDisplayer.MultipleUserFieldDisplayer
-multipleUser.displayer.multipleUser = com.silverpeas.form.fieldDisplayer.MultipleUserFieldDisplayer
+multipleUser.displayer = com.silverpeas.form.displayers.MultipleUserFieldDisplayer
+multipleUser.displayer.multipleUser = com.silverpeas.form.displayers.MultipleUserFieldDisplayer
 pdcUser.implementation = com.silverpeas.form.fieldType.PdcUserField
-pdcUser.displayer = com.silverpeas.form.fieldDisplayer.PdcUserFieldDisplayer
-pdcUser.displayer.pdc = com.silverpeas.form.fieldDisplayer.PdcUserFieldDisplayer
-pdcUser.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+pdcUser.displayer = com.silverpeas.form.displayers.PdcUserFieldDisplayer
+pdcUser.displayer.pdc = com.silverpeas.form.displayers.PdcUserFieldDisplayer
+pdcUser.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
 ldap.implementation = com.silverpeas.form.fieldType.LdapField
-ldap.displayer = com.silverpeas.form.fieldDisplayer.LdapFieldDisplayer
-ldap.displayer.ldap = com.silverpeas.form.fieldDisplayer.LdapFieldDisplayer
-ldap.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+ldap.displayer = com.silverpeas.form.displayers.LdapFieldDisplayer
+ldap.displayer.ldap = com.silverpeas.form.displayers.LdapFieldDisplayer
+ldap.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
 jdbc.implementation = com.silverpeas.form.fieldType.JdbcField
-jdbc.displayer = com.silverpeas.form.fieldDisplayer.JdbcFieldDisplayer
-jdbc.displayer.jdbc = com.silverpeas.form.fieldDisplayer.JdbcFieldDisplayer
-jdbc.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+jdbc.displayer = com.silverpeas.form.displayers.JdbcFieldDisplayer
+jdbc.displayer.jdbc = com.silverpeas.form.displayers.JdbcFieldDisplayer
+jdbc.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
 jdbcRef.implementation = com.silverpeas.form.fieldType.JdbcRefField
-jdbcRef.displayer = com.silverpeas.form.fieldDisplayer.JdbcRefFieldDisplayer
-jdbcRef.displayer.jdbc = com.silverpeas.form.fieldDisplayer.JdbcRefFieldDisplayer
-jdbcRef.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+jdbcRef.displayer = com.silverpeas.form.displayers.JdbcRefFieldDisplayer
+jdbcRef.displayer.jdbc = com.silverpeas.form.displayers.JdbcRefFieldDisplayer
+jdbcRef.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
 group.implementation = com.silverpeas.form.fieldType.GroupField
-group.displayer = com.silverpeas.form.fieldDisplayer.GroupFieldDisplayer
-group.displayer.group = com.silverpeas.form.fieldDisplayer.GroupFieldDisplayer
-group.displayer.simpletext = com.silverpeas.form.fieldDisplayer.TextDisplayer
+group.displayer = com.silverpeas.form.displayers.GroupFieldDisplayer
+group.displayer.group = com.silverpeas.form.displayers.GroupFieldDisplayer
+group.displayer.simpletext = com.silverpeas.form.displayers.TextDisplayer
