--- a/ws-test-core/pom.xml
+++ b/ws-test-core/pom.xml
@@ -74,6 +74,11 @@
       <artifactId>jersey-test-support</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
