update feature #2144 change configuration settings and add new search result form displayer

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -105,3 +105,14 @@ search.type.6.types=Publication
 search.type.7.components=forums
 search.type.7.types=
 
+###############################################################################
+# Result search templating. 
+#
+# result.template.COMPONENT_NAME=
+# - ALL
+# - NONE
+# - instanceid comma separated values
+#
+# Use only COMPONENT_NAME given inside XmlComponent configuration file
+result.template.kmelia=ALL
+
