--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -114,5 +114,6 @@ search.type.7.types=
 # - instanceid comma separated values
 #
 # Use only COMPONENT_NAME given inside XmlComponent configuration file
-result.template.kmelia=ALL
+result.template.kmelia=NONE
+result.template.almanach=NONE
 
