Updating to commons-lang3

--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -97,6 +97,10 @@
       <artifactId>h2</artifactId>
       <scope>compile</scope>
     </dependency>
+     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
