--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/Attachment.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/attachment/Attachment.properties
@@ -77,3 +77,6 @@ DelayReservedFile = 60
 ms.office.installation.path=C:\\\\Program Files\\\\Microsoft Office\\\\OFFICE10
 
 ui.useContextualMenu = false
+
+attachment.index.separately = true
+attachment.index.incorporated = true
