--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/authentication.properties
@@ -53,3 +53,6 @@ authentication.password.confirm = Confirmation
 authentication.password.length = (* caract\u00E8res minimum)
 authentication.password.length.alert = Votre mot de passe doit comporter au moins * caract\u00E8res
 authentication.password.different = Le mot de passe et sa confirmation ne sont pas identiques
+authentication.password.aboutToExpire = Votre mot de passe arrive bient\u00F4t \u00E0 expiration. Il est conseill\u00E9 de le changer dans les plus brefs d\u00E9lais.
+authentication.password.change = Changer le mot de passe
+authentication.password.remindMeLater = Me le rappeler plus tard
