Feature #1710. Integrates the work of Aurore on the PdC classification

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -245,7 +245,8 @@ GML.MustContainsLettersAndDigitsOnly = doit \u00eatre compos\u00e9 uniquement de
 #Plan de classement
 GML.PDC = Plan de Classement
 GML.PDCParam = Param\u00e9trer l'utilisation du PDC
-GML.PDCNewPosition = Cr\u00e9er une nouvelle position
+GML.PDCNewPosition = Ajouter une position ...
+GML.PDCValidatePosition = Valider cette position
 GML.PDCDeletePosition = Supprimer la ou les positions s\u00e9lectionn\u00e9e(s)
 
 #Contr\u00f4les d'acc\u00e8s
