Feature #1710. Take into accounts the differents issues of Nicolas

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -92,6 +92,7 @@ pdcPeas.optional                       = Facultatif
 pdcPeas.axisAlreadyExist               = Un axe de m\u00eame nom existe d\u00e9j\u00e0 !
 pdcPeas.valueAlreadyExist              = Une valeur de m\u00eame nom existe d\u00e9j\u00e0 !
 pdcPeas.maximumAxisReach               = Le nombre maximum d'axes a \u00e9t\u00e9 atteint !
+pdcPeas.positionAlreadyExist           = La position existe d\u00e9j\u00e0 !
 
 pdcPeas.emptyMotherName                = Le champ ' Valeur m\u00e8re ' est obligatoire
 pdcPeas.emptyDaughterName              = Le champ ' Valeur fille ' est obligatoire
