--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang.properties
@@ -247,7 +247,7 @@ GML.PDC = Plan de Classement
 GML.PDCParam = Param\u00e9trer l'utilisation du PDC
 GML.PDCNewPosition = Ajouter une position ...
 GML.PDCValidatePosition = Valider cette position
-GML.PDCDeletePosition = Supprimer la ou les positions s\u00e9lectionn\u00e9e(s)
+GML.PDCDeletePosition = Supprimer la position
 
 #Contr\u00f4les d'acc\u00e8s
 GML.ForbiddenAccessContent = Vous n'avez pas les droits suffisants pour acc\u00e9der \u00e0 l'information d\u00e9sir\u00e9e !
@@ -298,3 +298,5 @@ GML.at = \u00e0
 GML.From = De
 GML.linkToVisit = Lien \u00e0 visiter
 GML.Show = Afficher :
+
+GML.selectAValue = Veuillez s\u00e9lectionner une valeur
