Feature #invariantAxisPropertyDeletion. Fix a bug with the invariant value settings in the PdCBm implementation code. Add a new property to set or unset the use of the invariant axis. Now the contentId attribute in the gdcNewClassification tag is removed

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -21,6 +21,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
+useAxisInvariance = false
 glossaryShowAllAxis = true
 NbItemsParPage = 20
 EnableExport = false
@@ -29,9 +30,9 @@ XmlSearchVisible = true
 PertinenceVisible = true
 ChoiceNbResToDisplay = 10,20,30,50,100
 ## Valeurs possibles : 
-## All (ie : on affiche les choix de nb et de tri en constitution de requête et en résultat)
-## Res (ie : on affiche les choix de nb et de tri en résultat seulement)
-## Req (ie : on affiche les choix de nb et de tri en constitution de requête seulement)
+## All (ie : on affiche les choix de nb et de tri en constitution de requ\u00eate et en r\u00e9sultat)
+## Res (ie : on affiche les choix de nb et de tri en r\u00e9sultat seulement)
+## Req (ie : on affiche les choix de nb et de tri en constitution de requ\u00eate seulement)
 DisplayParamChoices = All
 
 # Auto-completion : maximum number of suggestions display by keyword auto-completion
