Removing deprecated code from Silvertrace

--- a/lib-core/src/test/resources/com/stratelia/silverpeas/silvertrace/settings/silverTrace.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/silvertrace/settings/silverTrace.properties
@@ -24,10 +24,10 @@
 # Properties of SilverTrace
 # -------------------------
 
-pathSilverTrace = C:/Silverpeas/KMEdition/Production/silvertrace
+pathSilverTrace=${project.build.directory}
 
 # Language used in error messages : for the moment only english if supported (en)
-language = fr
+language=fr
 
 # properties.properties file values
-ErrorDir=C:/tmp/
+ErrorDir=${project.build.directory}
