--- a/web-core/src/test/resources/com/stratelia/webactiv/general.properties
+++ b/web-core/src/test/resources/com/stratelia/webactiv/general.properties
@@ -23,7 +23,9 @@
 #
 ApplicationURL=/silverpeas/
 
-#Nom du workspace (configur\u00E9 dans repository.xml)
+server.ssl=true
+
+#Nom du workspace (configur\u00e9 dans repository.xml)
 webdav.workspace=jackrabbit
 #Mapping de la serlet webdav sans '/'
 webdav.respository=repository
@@ -48,7 +50,7 @@ smallLogo=/admin/jsp/icons/logo_silverpeas.gif
 smallLogoSilverBlue=icons/DomainbarSilverblue/logo.gif
 
 # advanced search with PDC
-# doit \u00EAtre \u00E0 true ou false
+# doit \u00eatre \u00e0 true ou false
 advancedSearchWithPDC = true
 
 # Domain visibility parameter
