--- a/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/general.properties
@@ -72,8 +72,8 @@ charset=UTF-8
 
 avatar.property = login
 avatar.extension = jpg
-
-exportTemplatePath = data/template-export
 avatar.path = 
 
-AdminFromComponentEnable = true
+exportTemplatePath = data/template-export
+
+AdminFromComponentEnable = false
