--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -274,7 +274,7 @@ external.search.server.1.label=My external server 1
 external.search.server.2.label=My external server 2
 
 pdcPeas.MustContainsMandatoryAxis=doit être classée sur les axes obligatoires
-pdcPeas.MustBeClassified = Le classement est obligatoire pour la cr\u00e9ation d'une publication. <br />Veuillez s\u00e9lectionner une position et la valider.
+pdcPeas.MustBeClassified = Le classement est obligatoire pour la cr\u00e9ation d'une contribution.<br />Veuillez s\u00e9lectionner une position et la valider.
 pdcPeas.theContent=Cette contribution
 
 # Label linked to pdcPeasSettings.properties : typed search
