Fixing dependencies for mail.jar and a typo in the JSP thus closing bug #2016

--- a/ejb-core/channels/pom.xml
+++ b/ejb-core/channels/pom.xml
@@ -19,6 +19,10 @@
       <version>${project.parent.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+    </dependency>
   </dependencies>
   
   <build>
