--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -48,6 +48,11 @@
       <artifactId>cdi-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
     </dependency>
