--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ target
 /ejb-core/formtemplate/.settings
 /ejb-core/formtemplate/.classpath
 /ejb-core/versioning/src/main/resources/META-INF/MANIFEST.MF
+/ejb-core/calendar/.settings
+/ejb-core/calendar/.classpath
+/ejb-core/calendar/.project
+/ejb-core/calendar/src/main/resources/META-INF/MANIFEST.MF
