fixing bug #2330 Fixing path to mapping file and path to xsd file

--- a/config-core/src/main/config/properties/com/silverpeas/importExport/settings/mapping.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExport/settings/mapping.properties
@@ -34,7 +34,7 @@ importExportLogFile = importExport.log
 xsdPublicId = http://intranoo.oevo.com/websilverpeas/exchange/v5
 
 # Default URL pointing to XML Schema specification of XML namespace used by import/export
-xsdDefaultSystemId = http://intranoo.oevo.com/websilverpeas/exchange/v5/SilverpeasExchange.xsd
+xsdDefaultSystemId = http://www.silverpeas.org/xsd/v5/SilverpeasExchange.xsd
 
 # URL pointing to XML Schema specification of XML namespace used by import/export
 # This location depends on one parameter which is expected to be the version of the namespace
