--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
 
       <plugin>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.0-beta-3</version>
+        <version>3.0</version>
         <configuration>
           <reportPlugins>
             <plugin>
