Feature #1871. Creates a new service in the comment component aimed to notify interested users about an action on a comment (comment add or removal). This service is created from the existing one for the classifieds component with a more generic behaviour: any silverpeas component interested to provide a such functionality has just to register itself to the new service

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/comment/multilang/comment.properties
@@ -24,28 +24,28 @@
 add = Ajouter
 author = Publieur
 c_comment = Commentaire
-created = Créé
-modified = Modifié
+created = Cr\u00e9\u00e9
+modified = Modifi\u00e9
 modify = Modifier
 delete = Supprimer
-suppressionConfirmation = Etes vous sûr de vouloir supprimer le
+suppressionConfirmation = Etes vous s\u00fbr de vouloir supprimer le
 type = Type
 name = Nom
 version = Version
 date = Date
 status = Etat
-creator = Créateur
+creator = Cr\u00e9ateur
 description = Description
 comments = Commentaires
 comment = commentaire
-lockedBy = Verrouillé par 
+lockedBy = Verrouill\u00e9 par 
 free = Libre
 ok = Valider
 cancel = Annuler
-alt = Verrouillé par
+alt = Verrouill\u00e9 par
 checkIn = Check In
 checkOut = Check Out
-addNewVersion = Créer une nouvelle version
+addNewVersion = Cr\u00e9er une nouvelle version
 newDocumentVersion = Nouvelle version du document
 new_document = Nouveau document
 browse = Parcourir
@@ -60,7 +60,7 @@ pleaseFill_single = Vous devez remplir tous les champs obligatoires.
 
 // erreurs
 erreur = Erreur
-champsTropLong = Le commentaire est limité à 2000 caractères
+champsTropLong = Le commentaire est limit\u00e9 \u00e0 2000 caract\u00e8res
 
 comment.DAO_NoClosedStatment = Impossible to close the " Statement "
 comment.EJB_NoClosedConnection = Impossible to close the connection to data base
@@ -78,3 +78,5 @@ comment.AC_NoDeletePath = Impossible to delete a context
 comment.AC_NoDeleteOnServer = the files will not be to remove server
 comment.AC_NoCreateIndex = the file will not be indexed by the search engine
 comment.AC_NoDeleteIndex = the file will be always indexed by the search engine
+
+comments.commentAddingSubject = Un commentaire a \u00e9t\u00e9 ajout\u00e9
