--- a/ejb-core/comment/src/test/resources/com/silverpeas/classifieds/settings/classifiedsSettings.properties
+++ b/ejb-core/comment/src/test/resources/com/silverpeas/classifieds/settings/classifiedsSettings.properties
@@ -21,9 +21,11 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# Properties of comment
-# -------------------------
-AdminAllowedToUpdate = true
 
-templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/
-customersTemplatePath=${SILVERPEAS_DATA_HOME}/StringTemplates/
+# date et heure de la suppression automatique des petites annonces arrivant à terme
+cronScheduledDeleteClassifieds = 05 12 * * *
+# nombre de jour pour suppression automatique
+nbDaysForDeleteClassifieds = 365
+
+templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/components/classifieds/
+customersTemplatePath=${SILVERPEAS_DATA_HOME}/StringTemplates/components/classifieds/
