--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,27 @@
           </reportPlugins>
         </configuration>
       </plugin>
+      <!--
+      <plugin>
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <version>0.1-SNAPSHOT</version>
+        <configuration>
+          <description>Creating site</description>
+          <override>false</override>
+          <message>Deploying web site on Githbub for ${project.name} - ${project.version}</message>
+          <includeAttached>true</includeAttached>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>site</goal>
+            </goals>
+            <phase>site</phase>
+          </execution>
+        </executions>
+      </plugin>
+      -->
 
     </plugins>
   </build>
@@ -178,10 +199,8 @@
           <plugin>
             <groupId>com.kalistick.client.connector</groupId>
             <artifactId>kalistick-maven-plugin</artifactId>
-            <version>3.1.2</version>
             <configuration>
               <configFile>${project.basedir}/src/config/agent_cockpit/kalistick-new.xml</configFile>
-<!--              <version>${project.version}-${build.timestamp}</version>-->
               <excludes>
                 <exclude>*.iml</exclude>
               </excludes>
@@ -218,7 +237,7 @@
   </modules>
 
   <properties>
-    <installer_stable_version>5.7</installer_stable_version>
+    <installer_stable_version>5.7.1</installer_stable_version>
     <installer_version>${project.version}</installer_version>
   </properties>
 
