--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -69,10 +69,10 @@ external.search.server.1.data.path=D:\\silverpeas\\external_server_1\\data
 external.search.server.1.component.filters=kmelia
 external.search.server.1.url=http://external_server_1/silverpeas
 
-external.search.server.2.name=EXTERNAL SRV 2
-external.search.server.2.data.path=D:\\silverpeas\\external_server_2\\data
-external.search.server.2.component.filters=kmelia
-external.search.server.2.url=http://external_server_2/silverpeas
+#external.search.server.2.name=EXTERNAL SRV 2
+#external.search.server.2.data.path=D:\\silverpeas\\external_server_2\\data
+#external.search.server.2.component.filters=kmelia
+#external.search.server.2.url=http://external_server_2/silverpeas
 
 
 ###############################################################################
