Fixing problem with xmlbeans and adding a Lucene Parser using Tika

--- a/lib-core/pom.xml
+++ b/lib-core/pom.xml
@@ -339,6 +339,12 @@
       <groupId>org.apache.tika</groupId>
       <artifactId>tika-parsers</artifactId>
     </dependency>
+    <dependency>
+      <artifactId>xmlbeans</artifactId>
+      <groupId>org.apache.xmlbeans</groupId>
+      <type>jar</type>      
+      <classifier>jdk6</classifier>
+    </dependency>
   </dependencies>
 
   <build>
