--- a/ejb-core/pdc/pom.xml
+++ b/ejb-core/pdc/pom.xml
@@ -79,5 +79,39 @@
     <filters>
       <filter>src/test/filters/filters.properties</filter>
     </filters>
+<!--    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>hibernate3-maven-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>hbm2ddl</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <components>
+            <component>
+              <name>hbm2ddl</name>
+              <implementation>jpaconfiguration</implementation>
+            </component>
+          </components>
+          <componentProperties>
+            <persistenceunit>silverpeas-pu</persistenceunit>
+            <outputfilename>schema.ddl</outputfilename>
+            <drop>false</drop>
+            <create>true</create>
+            <export>false</export>
+            <format>true</format>
+          </componentProperties>
+        </configuration>
+      </plugin>
+    </plugins>-->
   </build>
+  <properties>
+    <netbeans.hint.deploy.server>JBoss4</netbeans.hint.deploy.server>
+  </properties>
 </project>
